# polylogarithm

./: .clang-tidy  .gitattributes  .gitmodules  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  LICENSE  README  README.md  dilog.cpp  dilog.hpp  polylog.cpp  polylog.hpp
.github/workflows/: coverage.yml  test.yml
examples/: example.F90  example.c  example.cpp  example.f90
src/: CMakeLists.txt  Cl1.cpp  Cl1.hpp  Cl2.cpp  Cl2.hpp  Cl3.cpp  Cl3.hpp  Cl4.cpp  Cl4.hpp  Cl5.cpp  Cl5.hpp  Cl6.cpp  Cl6.hpp  Li.cpp  Li.hpp  Li0.cpp  Li0.hpp  Li1.cpp  Li1.hpp  Li2.c  Li2.cpp  Li2.h  Li2.hpp  Li3.c  Li3.cpp  Li3.h  Li3.hpp  Li4.c  Li4.cpp  Li4.h  Li4.hpp  Li5.cpp  Li5.hpp  Li6.cpp  Li6.hpp  complex.hpp  version.h  version.hpp
src/c/: CMakeLists.txt  Cl2.c  Cl2.h  Cl3.c  Cl3.h  Cl4.c  Cl4.h  Cl5.c  Cl5.h  Cl6.c  Cl6.h  Li2.c  Li2.h  Li3.c  Li3.h  Li4.c  Li4.h  Li5.c  Li5.h  Li6.c  Li6.h  c_wrappers.c  c_wrappers.h  cwrappers.c  cwrappers.h  fast_clog.h  log.c  log.h  polylogarithm.h
src/cpp/: CMakeLists.txt  Cl.cpp  Cl.hpp  Cl1.cpp  Cl1.hpp  Cl2.cpp  Cl3.cpp  Cl3.hpp  Cl4.cpp  Cl4.hpp  Cl5.cpp  Cl5.hpp  Cl6.cpp  Li.cpp  Li.hpp  Li2.cpp  Li2.hpp  Li3.cpp  Li3.hpp  Li4.cpp  Li4.hpp  Li5.cpp  Li5.hpp  Li6.cpp  Li6.hpp  Sl.cpp  Sl.hpp  complex.hpp  eta.cpp  eta.hpp  factorial.cpp  harmonic.cpp  harmonic.hpp  horner.hpp  inv_fac.cpp  inv_fac.hpp  log.hpp  zeta.cpp  zeta.hpp
src/fortran/: CMakeLists.txt  Cl2.f90  Cl2.fh  Cl3.f90  Cl3.fh  Cl4.f90  Cl4.fh  Cl5.f90  Cl5.fh  Cl6.f90  Cl6.fh  Li2.f90  Li2.fh  Li3.f90  Li3.fh  Li4.f90  Li4.fh  Li5.f90  Li5.fh  Li6.f90  Li6.fh  cwrappers.f90  fast_clog.f90  fortran_wrappers.f90  fortran_wrappers.h  horner.f90  log.f90
test/: CMakeLists.txt  bench.cpp  bench.hpp  bench_Cl.cpp  bench_Li.cpp  bench_Li2.cpp  bench_Li3.cpp  bench_Li4.cpp  bench_Sl.cpp  c_wrappers.c  dilog.m  doctest.h  generate_data.m  generate_data_Cl.m  generate_data_Li.m  makefile  polylog.m  read_data.hpp  stopwatch.hpp  test.cpp  test.hpp  test_Cl.cpp  test_Cl1.cpp  test_Cl2.cpp  test_Cl3.cpp  test_Cl4.cpp  test_Cl5.cpp  test_Cl6.cpp  test_Li.cpp  test_Li0.cpp  test_Li1.cpp  test_Li2.cpp  test_Li3.cpp  test_Li4.cpp  test_Li5.cpp  test_Li6.cpp  test_Sl.cpp  test_clausen.cpp  test_dilog.cpp  test_eta.cpp  (+6 more)
test/algorithm_327/: algorithm_327.c
test/algorithm_490/: algorithm_490.c
test/alt/: CMakeLists.txt  README.md  alt.c  alt.h
test/alt/algorithm_327/: CMakeLists.txt  algorithm_327.c  algorithm_327.h
test/alt/algorithm_490/: CMakeLists.txt  algorithm_490.c  algorithm_490.h
test/alt/babar/: CMakeLists.txt  babar.c
test/alt/bernoulli/: CMakeLists.txt  bernoulli.c
test/alt/c/: CMakeLists.txt  Li2.c  Li3.c  Li4.c  Li5.c  Li6.c
test/alt/cephes/: cephes.c  cephes.h
test/alt/feynhiggs/: CMakeLists.txt  feynhiggs.c
test/alt/fortran/: CMakeLists.txt  Li2.f90  Li3.f90  Li4.f90  cwrappers.f90  fast_cdlog.f90  horner.f90
test/alt/fortran77/: Li2.f
test/alt/hassani/: CMakeLists.txt  hassani.c  hassani.h  hassani.m
test/alt/hdecay/: CMakeLists.txt  hdecay.c
test/alt/hollik/: CMakeLists.txt  hollik.c  hollik.h
test/alt/koelbig/: CMakeLists.txt  koelbig.c
test/alt/looptools/: CMakeLists.txt  Li2.F  defs.h  externals.h  ff.h  ffcli2.F  fferr.h  ffinit.F  ffwarn.h  ffxli2.F  ini.F  looptools.c  lt.h  ltnames.h  types.h
test/alt/morris/: CMakeLists.txt  morris.c
test/alt/pade/: CMakeLists.txt  pade.c
test/alt/pythia/: CMakeLists.txt  pythia.c
test/alt/sherpa/: CMakeLists.txt  sherpa.c
test/alt/spheno/: CMakeLists.txt  spheno.c
test/alt/tsil/: CMakeLists.txt  dilog.c  tsil.h
test/alt/wu/: CMakeLists.txt  wu.c
test/cephes/: CMakeLists.txt  cephes.c  cephes.h
test/data/: Cl1.txt  Cl10.txt  Cl1000.txt  Cl1001.txt  Cl11.txt  Cl12.txt  Cl13.txt  Cl14.txt  Cl15.txt  Cl16.txt  Cl2.txt  Cl3.txt  Cl4.txt  Cl5.txt  Cl6.txt  Cl7.txt  Cl8.txt  Cl9.txt  Li-1.txt  Li-10.txt  Li-100.txt  Li-2.txt  Li-3.txt  Li-4.txt  Li-5.txt  Li-6.txt  Li-7.txt  Li-8.txt  Li-9.txt  Li0.txt  Li1.txt  Li100.txt  Li2.txt  Li3.txt  Li4.txt  Li5.txt  Li6.txt  Sl1.txt  Sl10.txt  Sl1000.txt  (+30 more)
test/hollik/: hollik.c  hollik.h
test/math/: clausenBernoulli.m  clausenCheby.m  clausenEconomizedPadeApprox.m  clausenKoelbig.m  clausenMinimaxApprox.m  clausenSeries.m  dilogEconomizedPadeApprox.m  dilogMinimaxApprox.m  dilogRationalApprox.m  dilogRelations.m  dilogRemezApprox.m  tetralogMinimaxApprox.m  trilogMinimaxApprox.m
test/tsil/: trilog.c  tsil_cpp.h
